issueNav logo spacing

--- a/main.css
+++ b/main.css
@@ -456,6 +456,7 @@ main {
 }
 .issueNav img {
     height: 2em;
+    margin: .5em 0;
 }
 #backToTopIssue {
     position: fixed;
